--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/cypress": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.1",
     "cypress": "^10.10.0"
   },
   "dependencies": {
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.0/xlsx-0.19.0.tgz"
   }
 }
