--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
    "compilerOptions": {
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress"]
+    "target": "es6",
+    "lib": ["es6", "dom"],
+    "types": ["cypress"],
+    "baseUrl": "./"
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts"],
+  "extends": "@tsconfig/recommended/tsconfig.json"
 }
